Refactor list of validators.